<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" >
        <Button
            android:id="@+id/button_edit_quest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_quest" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_name"
            style="@style/text_detail_label" />
        <TextView
            android:id="@+id/text_pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_detail" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_type"
            style="@style/text_detail_label" />
        <TextView
            android:id="@+id/text_pet_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_detail" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_location"
            style="@style/text_detail_label" />
        <TextView
            android:id="@+id/text_quest_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_detail" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_health"
            style="@style/text_detail_label" />
        <TextView
            android:id="@+id/text_pet_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_detail" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_photo"
            style="@style/text_detail_label" />
        <ImageView
            android:id="@+id/image_pet_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/text_pet_photo"
            android:scaleType="centerCrop"
            android:background="#808080" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_note"
            style="@style/text_detail_label" />
        <TextView
            android:id="@+id/text_quest_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_detail" />
        <Button
            android:id="@+id/button_start_quest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/button_start_quest" />
        <Button
            android:id="@+id/button_cancel_quest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/button_cancel_quest" />
    </LinearLayout>

</ScrollView>
