<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_name"
            style="@style/text_editor_label" />
        <EditText
            android:id="@+id/edit_pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_editor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_type"
            style="@style/text_editor_label" />
        <Spinner
            android:id="@+id/spinner_pet_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinner_pet_subtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_location"
            style="@style/text_editor_label" />
        <EditText
            android:id="@+id/edit_quest_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_editor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_health"
            style="@style/text_editor_label" />
        <Spinner
            android:id="@+id/spinner_pet_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/check_pet_caught"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_caught"
            style="@style/text_editor_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_photo"
            style="@style/text_editor_label" />
        <ImageView
            android:id="@+id/image_pet_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/text_pet_photo"
            android:scaleType="centerCrop"
            android:background="#808080" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_quest_note"
            style="@style/text_editor_label" />
        <EditText
            android:id="@+id/edit_quest_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_editor" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp" >
            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel" />
            <Button
                android:id="@+id/button_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
